--- a/src/styles/flexHelpers.scss
+++ b/src/styles/flexHelpers.scss
@@ -1,55 +1,50 @@
 @use './variables.scss' as vars;
 
 .flex {
-  display: flex
-}
+  display: flex;
 
-.flex-col {
-  flex-direction: column;
-}
-
-.flex-row {
-  flex-direction: row;
-}
-
-.justify-center {
-  justify-content: center;
-}
-
-.justify-start {
-  justify-content: flex-start;
-}
-
-.justify-end {
-  justify-content: flex-end;
-}
-
-.justify-between {
-  justify-content: space-between;
-}
-
-.justify-around {
-  justify-content: space-around;
-}
-
-.justify-evenly {
-  justify-content: space-evenly;
-}
-
-.align-start {
-  align-items: flex-start;
-}
-
-.align-center {
-  align-items: center;
-}
-
-.align-end {
-  align-items: flex-end;
-}
-
-@each $label, $spacer in vars.$spacers {
-  .flex-gap-#{$label} {
-    gap: $spacer;
+  &-col {
+    @extend .flex;
+    flex-direction: column;
+  }
+  &-row {
+    @extend .flex;
+    flex-direction: row;
   }
 }
+
+.justify {
+  &-center {
+    justify-content: center;
+  }
+  &-start {
+    justify-content: flex-start;
+  }
+  &-end {
+    justify-content: flex-end;
+  }
+  &-between {
+    justify-content: space-between;
+  }
+  &-around {
+    justify-content: space-around;
+  }
+  &-evenly {
+    justify-content: space-evenly;
+  }
+}
+
+.align { 
+  &-start {
+    align-items: flex-start;
+  }
+  
+  &-center {
+    align-items: center;
+  }
+  
+  &-end {
+    align-items: flex-end;
+  }
+}
+
