--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -11,4 +11,12 @@ $spacers: () !default;
   }
 }
 
+$colors: () !default;
+$colors: map-merge(
+(
+  yeehaw: #ffffff,
+  surface: #b1b1b1,
+  surface-lighten-1: #d8d8d8
+), $colors);
+
 
