added more stuff yay

--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -11,6 +11,8 @@ $spacers: () !default;
   }
 }
 
+$bg-img: url(../assets/space-background.jpg) !default;
+
 $colors: () !default;
 $colors: map-merge(
 (
