--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -2,11 +2,20 @@
 @use './flexHelpers.scss';
 @use './spacing.scss';
 @use './colors.scss';
+@use './markdown.scss';
+@use './variables.scss' as vars;
 
+html {
+  scroll-behavior: smooth;
+}
+
+body {
+  background: vars.$bg-img;
+}
 
 main {
   width: 100%;
-  height: 100%;
+  min-height: 100%;
 }
 
 .full-width {
@@ -14,7 +23,8 @@ main {
 }
 
 .full-height {
-  height: 100%;
+  min-height: 100% !important;
+  height: fit-content;
 }
 
 .fluid {
